# hello-opencv

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md  readme.sh
examples/canny/detector_hipersayanx/: main.cpp
examples/hough/line_detector_frotms/: main.cpp
examples/org/cpp/: grabcut.cpp
hello/: readme.sh
hello/core/color/addWeighted1/: main.cpp
hello/core/color/convert1/: main.cpp
hello/core/color/inrange1/: main.cpp
hello/helloworld/: main.cpp
hello/hog/: people1.ipynb
hello/hog/hog1/: main.cpp
hello/imgproc/canny1/: main.cpp
hello/imgproc/morphology/: 未命名.ipynb
hello/ml/svm1/: main.cpp
hello/python/: callpython.sh  lang-cpython-pxd-pyx-pyd.md  lang-cpython.sh  pybind11.sh
hello/python/callpython-getattr1/: callpython-getattr1.sh  main.cpp  multiply.py
hello/python/callpython1/: main.cpp
hello/python/callpython2/: main.cpp
hello/python/callpython3/: a.py  a1.py  a3.py  main.cpp
hello/python/lang-cpython1/: hello1.c  hello1.pyx  hello2.c  hello2.pyx  lang-cpython1.sh  setup-hello1.py  setup-hello2.py
hello/python/pythoncall1/: cxpython2.sh  sample.c  sample.h  setup.py
hello/python/pythoncall2/: cxpython1.sh  test.py
man/: a.cpp  b.cpp  build.sh  cv2.sh  floodfill.sh  mat.cpp  readme.sh  setup.sh
man/cv2/: config-3.7.py  config.py
man/ffmpeg/: FindFFMPEG-.cmake  FindFFMPEG.cmake  build.sh  ffmpeg.sh
man/histogram/: histogram.sh
man/mat/: 0.txt  p10x10-black-white.txt
tools/image-background/: main.cpp
tools/image-generator/: main.cpp
tools/image-splitor/: main.cpp
tools/image-splitor2/: main.cpp
(+24 files in other folders)
